[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXL(Library)/C, C++/AXD.h

//========== 보드 및 모듈 정보 
    // DIO 모듈이 있는지 확인
    DWORD    __stdcall AxdInfoIsDIOModule(DWORD *upStatus);
    
    // DIO 모듈 No 확인
    DWORD    __stdcall AxdInfoGetModuleNo(long lBoardNo, long lModulePos, long *lpModuleNo);
    
    // DIO 입출력 모듈의 개수 확인
    DWORD    __stdcall AxdInfoGetModuleCount(long *lpModuleCount);
    // 지정한 모듈의 입력 접점 개수 확인
    DWORD    __stdcall AxdInfoGetInputCount(long lModuleNo, long *lpCount);
    
    // 지정한 모듈의 출력 접점 개수 확인
    DWORD    __stdcall AxdInfoGetOutputCount(long lModuleNo, long *lpCount);
    
    // 지정한 모듈 번호로 베이스 보드 번호, 모듈 위치, 모듈 ID 확인
    DWORD    __stdcall AxdInfoGetModule(long lModuleNo, long *lpBoardNo, long *lpModulePos, DWORD *upModuleID);
    // 해당 모듈이 제어가 가능한 상태인지 반환한다.
    DWORD    __stdcall AxdInfoGetModuleStatus(long lModuleNo);
//========== 인터럽트 설정 확인 
    // 지정한 모듈에 인터럽트 메시지를 받아오기 위하여 윈도우 메시지, 콜백 함수 또는 이벤트 방식을 사용
    //========= 인터럽트 관련 함수 ======================================================================================
    // 콜백 함수 방식은 이벤트 발생 시점에 즉시 콜백 함수가 호출 됨으로 가장 빠르게 이벤트를 통지받을 수 있는 장점이 있으나
    // 콜백 함수가 완전히 종료 될 때까지 메인 프로세스가 정체되어 있게 된다.
    // 즉, 콜백 함수 내에 부하가 걸리는 작업이 있을 경우에는 사용에 주의를 요한다. 
    // 이벤트 방식은 쓰레드등을 이용하여 인터럽트 발생여부를 지속적으로 감시하고 있다가 인터럽트가 발생하면 
    // 처리해주는 방법으로, 쓰레드 등으로 인해 시스템 자원을 점유하고 있는 단점이 있지만
    // 가장 빠르게 인터럽트를 검출하고 처리해줄 수 있는 장점이 있다.
    // 일반적으로는 많이 쓰이지 않지만, 인터럽트의 빠른처리가 주요 관심사인 경우에 사용된다. 
    // 이벤트 방식은 이벤트의 발생 여부를 감시하는 특정 쓰레드를 사용하여 메인 프로세스와 별개로 동작되므로
    // MultiProcessor 시스템등에서 자원을 가장 효율적으로 사용할 수 있게 되어 특히 권장하는 방식이다.
    // 인터럽트 메시지를 받아오기 위하여 윈도우 메시지 또는 콜백 함수를 사용한다.
    // (메시지 핸들, 메시지 ID, 콜백함수, 인터럽트 이벤트)
    //    hWnd    : 윈도우 핸들, 윈도우 메세지를 받을때 사용. 사용하지 않으면 NULL을 입력.
    //    uMessage: 윈도우 핸들의 메세지, 사용하지 않거나 디폴트값을 사용하려면 0을 입력.
    //    proc    : 인터럽트 발생시 호출될 함수의 포인터, 사용하지 않으면 NULL을 입력.
    //    pEvent  : 이벤트 방법사용시 이벤트 핸들
    // Ex)
    // AxdiInterruptSetModule(0, Null, 0, AxtInterruptProc, NULL);
    // void __stdcall AxtInterruptProc(long lActiveNo, DWORD uFlag){
    //     ... ;
    // }
    DWORD    __stdcall AxdiInterruptSetModule(long lModuleNo, HWND hWnd, DWORD uMessage, AXT_INTERRUPT_PROC pProc, HANDLE *pEvent);
    
    // 지정한 모듈의 인터럽트 사용 유무 설정
    //======================================================//
    // uUse    : DISABLE(0)    // 인터럽트 해제
    //         : ENABLE(1)     // 인터럽트 설정
    //======================================================//
    DWORD    __stdcall AxdiInterruptSetModuleEnable(long lModuleNo, DWORD uUse);
    
    // 지정한 모듈의 인터럽트 사용 유무 확인
    //======================================================//
    // *upUse  : DISABLE(0)    // 인터럽트 해제
    //         : ENABLE(1)     // 인터럽트 설정
    //======================================================//
    DWORD    __stdcall AxdiInterruptGetModuleEnable(long lModuleNo, DWORD *upUse);
    
    // 이벤트 방식 인터럽트 사용시 인터럽트 발생 위치 확인
    DWORD    __stdcall AxdiInterruptRead(long *lpModuleNo, DWORD *upFlag);
//========== 인터럽트 상승 / 하강 에지 설정 확인 
    // 지정한 입력 접점 모듈, Interrupt Rising / Falling Edge register의 Offset 위치에서 bit 단위로 상승 또는 하강 에지 값을 설정
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 입력 접점에 대한 Offset 위치
    // uMode       : DOWN_EDGE(0)
    //             : UP_EDGE(1)
    // uValue      : DISABLE(0)
    //             : ENABLE(1)
    //===============================================================================================//
    DWORD    __stdcall AxdiInterruptEdgeSetBit(long lModuleNo, long lOffset, DWORD uMode, DWORD uValue);
    
    // 지정한 입력 접점 모듈, Interrupt Rising / Falling Edge register의 Offset 위치에서 byte 단위로 상승 또는 하강 에지 값을 설정
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 입력 접점에 대한 Offset 위치
    // uMode       : DOWN_EDGE(0)
    //             : UP_EDGE(1)
    // uValue      : 0x00 ~ 0x0FF ('1'로 Setting 된 부분 인터럽트 설정)
    //===============================================================================================//
    DWORD    __stdcall AxdiInterruptEdgeSetByte(long lModuleNo, long lOffset, DWORD uMode, DWORD uValue);
    
    // 지정한 입력 접점 모듈, Interrupt Rising / Falling Edge register의 Offset 위치에서 word 단위로 상승 또는 하강 에지 값을 설정
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 입력 접점에 대한 Offset 위치
    // uMode       : DOWN_EDGE(0)
    //             : UP_EDGE(1)
    // uValue      : 0x00 ~ 0x0FFFF ('1'로 Setting 된 부분 인터럽트 설정)
    //===============================================================================================//
    DWORD    __stdcall AxdiInterruptEdgeSetWord(long lModuleNo, long lOffset, DWORD uMode, DWORD uValue);
    
    // 지정한 입력 접점 모듈, Interrupt Rising / Falling Edge register의 Offset 위치에서 double word 단위로 상승 또는 하강 에지 값을 설정
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 입력 접점에 대한 Offset 위치
    // uMode       : DOWN_EDGE(0)
    //             : UP_EDGE(1)
    // uValue      : 0x00 ~ 0x0FFFFFFFF ('1'로 Setting 된 부분 인터럽트 설정)
    //===============================================================================================//
    DWORD    __stdcall AxdiInterruptEdgeSetDword(long lModuleNo, long lOffset, DWORD uMode, DWORD uValue);
    // 지정한 입력 접점 모듈, Interrupt Rising / Falling Edge register의 Offset 위치에서 bit 단위로 상승 또는 하강 에지 값을 확인
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 입력 접점에 대한 Offset 위치
    // uMode       : DOWN_EDGE(0)
    //             : UP_EDGE(1)
    // *upValue    : 0x00 ~ 0x0FF ('1'로 Setting 된 부분 인터럽트 설정)
    //===============================================================================================//
    DWORD    __stdcall AxdiInterruptEdgeGetBit(long lModuleNo, long lOffset, DWORD uMode, DWORD *upValue);
    
    // 지정한 입력 접점 모듈, Interrupt Rising / Falling Edge register의 Offset 위치에서 byte 단위로 상승 또는 하강 에지 값을 확인
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 입력 접점에 대한 Offset 위치
    // uMode       : DOWN_EDGE(0)
    //             : UP_EDGE(1)
    // *upValue    : 0x00 ~ 0x0FF ('1'로 Setting 된 부분 인터럽트 설정)
    //===============================================================================================//
    DWORD    __stdcall AxdiInterruptEdgeGetByte(long lModuleNo, long lOffset, DWORD uMode, DWORD *upValue);
    
    // 지정한 입력 접점 모듈, Interrupt Rising / Falling Edge register의 Offset 위치에서 word 단위로 상승 또는 하강 에지 값을 확인
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 입력 접점에 대한 Offset 위치
    // uMode       : DOWN_EDGE(0)
    //             : UP_EDGE(1)
    // *upValue    : 0x00 ~ 0x0FFFFFFFF ('1'로 Setting 된 부분 인터럽트 설정)
    //===============================================================================================//
    DWORD    __stdcall AxdiInterruptEdgeGetWord(long lModuleNo, long lOffset, DWORD uMode, DWORD *upValue);
    
    // 지정한 입력 접점 모듈, Interrupt Rising / Falling Edge register의 Offset 위치에서 double word 단위로 상승 또는 하강 에지 값을 확인
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 입력 접점에 대한 Offset 위치
    // uMode       : DOWN_EDGE(0)
    //             : UP_EDGE(1)
    // *upValue    : 0x00 ~ 0x0FFFFFFFF ('1'로 Setting 된 부분 인터럽트 설정)
    //===============================================================================================//
    DWORD    __stdcall AxdiInterruptEdgeGetDword(long lModuleNo, long lOffset, DWORD uMode, DWORD *upValue);
    
    // 전체 입력 접점 모듈, Interrupt Rising / Falling Edge register의 Offset 위치에서 bit 단위로 상승 또는 하강 에지 값을 설정
    //===============================================================================================//
    // lOffset     : 입력 접점에 대한 Offset 위치
    // uMode       : DOWN_EDGE(0)
    //             : UP_EDGE(1)
    // uValue      : DISABLE(0)
    //             : ENABLE(1)
    //===============================================================================================//
    DWORD    __stdcall AxdiInterruptEdgeSet(long lOffset, DWORD uMode, DWORD uValue);
    
    // 전체 입력 접점 모듈, Interrupt Rising / Falling Edge register의 Offset 위정에서 bit 단위로 상승 또는 하강 에지 값을 확인
    //===============================================================================================//
    // lOffset     : 입력 접점에 대한 Offset 위치
    // uMode       : DOWN_EDGE(0)
    //             : UP_EDGE(1)
    // *upValue    : DISABLE(0)
    //             : ENABLE(1)
    //===============================================================================================//
    DWORD    __stdcall AxdiInterruptEdgeGet(long lOffset, DWORD uMode, DWORD *upValue);